maybe fixed long tip bug overlapping the footer

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ main {
     row-gap: 10px;
     justify-content: center;
     align-items: center;
-    height: 70vh;
+    height: 60vh;
     font-size: x-large;
 }
 
